# staking

./: .env  package-lock.json  package.json
API/: Cargo.toml
API/src/: main.rs  token.json
API/src/contract_handlers/: key_instance.rs  mod.rs
API/src/database_connection/: mod.rs
API/src/handlers/: mod.rs
API/src/server_config/: mod.rs
API/src/wallet_gen/: mod.rs
Handler/: Cargo.toml
Handler/src/: main.rs  token_example.json
backend/API/src/contract_handlers/: contract_instance.rs  mod.rs
backend/contracts/: staking.sol
backend/test/: staking.js
contracts/: erc20.sol  staking.sol  test.sol
frontend/staking-client/src/: App.css
migrations/: 1_initial_migration.js
misc/: Cargo.toml
misc _test/: Cargo.toml
misc _test/src/: main.rs  token.json
misc _test/src/server_config/: mod.rs
misc/src/: main.rs
staking/: package-lock.json  package.json
staking-client/: package-lock.json  package.json
staking-client/src/: App.css  App.js  GetUser.js
staking/src/: App.css  App.js  getUser.js
test/: STK.js  staking.js
